apps/base/homepage-wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-wordpress
  namespace: homepage-wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage-wordpress
  template:
    metadata:
      labels:
        app: homepage-wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6.7-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
      volumes:
        - name: wordpress-data
          emptyDir: {}
