apps/base/homepage-wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-wordpress
  namespace: homepage-wordpress
spec:
  selector:
    app: homepage-wordpress
  ports:
    - port: 80
      targetPort: 80
