apps/base/homepage-wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-wordpress
  namespace: homepage-wordpress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-wordpress
                port:
                  number: 80
